test/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-test-backend-service
spec:
  selector:
    app: nodejs-test-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
